2002-09-15  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SLA.xs: Add full support for Fortran version of SLALIB

2002-08-15  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SLA.xs: Fix argument list for slaOap
	

2002-08-11  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SLA.xs: Add slaPertel and slaPertue

2002-05-24  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Make release 0.95

2002-04-12  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: slaPlante had wrong calling arguments

2001-04-24  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: update copyright

	* MANIFEST: Add t/preces.t

	* README: Tweak for 0.94 

	* SLA.pm: Version 0.94. Update copyright.

2000-11-21  Tim Jenness  <timj@jach.hawaii.edu>

	* t/preces.t: Add test for slaPreces

	* SLA.xs: slaPreces - the ra and dec variables are input and
	output not just output.

	* t/fk4to5.t: Use Test module

2000-04-11  Tim Jenness  <timj@jach.hawaii.edu>

	* t/fk4to5.t: Improve the test (and fix btoj for -00 decs)
	(btoj): dont use abs($d), multiply by dsign instead.

2000-03-28  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm (ut2lst_tel): Add missing command

	* t/mjd.t: Add new test

	* Makefile.PL: Add Test prerequisite

	* SLA.pm: Increase version number to 0.93

	* t/slaObs.t: Add new test.

	* SLA.xs: Rename slaObs to _slaObs and call from perl layer

	* SLA.pm (slaObs): Add perl layer to translate undef to '' to
	prevent segmentation violation occurring on my linux system.

	* stime: Add example program

        * SLA.pm (lstnow_tel): Trap for unknown telescopes.
	
2000-03-24  Tim Jenness  <timj@jach.hawaii.edu>

	* arrays.c: Use PL_na symbols rather than na

2000-02-14  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: Apply patch to slaEg50 thanks to Chris Phillips.

1999-10-11  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Version number now 0.92
	
	* SLA.pm: Export single precisions commands. Export slaDvxv.
	Update documentation to reflect the exportable commands rather
	than the initial list.
	