@@ -1,3 +1,7 @@
+2002-09-15  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* SLA.pm: Announce Fortran version support in documentation
+
 2002-09-15  Tim Jenness  <t.jenness@jach.hawaii.edu>
 
 	* SLA.xs: Add full support for Fortran version of SLALIB
